# FundTuneLab

./: .gitignore  README.md  pyproject.toml
.taskmaster/: config.json  state.json
.taskmaster/docs/: initial_prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
config/: README.md  __init__.py  environment_template.txt  settings.py
data/: README.md
data/processed/: BND_processed_20250714_metadata.json  BND_processed_20250715_metadata.json  BND_processed_20250716.csv  BND_processed_20250716_metadata.json  DBC_processed_20250714.csv  DBC_processed_20250714_metadata.json  DBC_processed_20250715_metadata.json  DBC_processed_20250716_metadata.json  EFA_processed_20250714_metadata.json  EFA_processed_20250715_metadata.json  EFA_processed_20250716.csv  EFA_processed_20250716_metadata.json  GLD_processed_20250714_metadata.json  GLD_processed_20250715_metadata.json  GLD_processed_20250716.csv  GLD_processed_20250716_metadata.json  IWM_processed_20250714_metadata.json  IWM_processed_20250715_metadata.json  IWM_processed_20250716.csv  IWM_processed_20250716_metadata.json  QQQ_processed_20250714_metadata.json  QQQ_processed_20250715_metadata.json  QQQ_processed_20250716.csv  (+37 more)
notebooks/: README.md  weights.csv
results/: README.md
src/: __init__.py  backtesting.py  cli.py  comparison.py  data_collection.py  data_preprocessing.py  eiten_optimizer.py  log_analyzer.py  orchestrator.py  pypfopt_optimizer.py  riskfolio_optimizer.py  unified_reporting.py
tests/: test_comparison.py  test_config.py  test_integration.py
(+94 files in other folders)
