[project]
name = "fundtunelab"
version = "0.1.0"
description = "A personal exploration of Python libraries for investment portfolio optimization, applied to real-world fund allocation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.3",
]
