[project]
name = "fundtunelab"
version = "0.1.0"
description = "A personal exploration of Python libraries for investment portfolio optimization, applied to real-world fund allocation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.65",
    "scipy>=1.16.0",
    "PyPortfolioOpt>=1.5.0",
    "riskfolio-lib>=7.0.1",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.3",
]
